[mirotalkwebrtc] - add user/isAuth endpoint, update dep
